ALIEN-2624 : Configure a Vault in alien4cloud

--- a/alien4cloud-ui/src/main/webapp/views/orchestrators/orchestrator_location_secret.html
+++ b/alien4cloud-ui/src/main/webapp/views/orchestrators/orchestrator_location_secret.html
@@ -16,6 +16,7 @@
   type="uiModel.locationDTO.secretProviderConfigurations.genericFormByPluginName[currentPluginConfiguration.pluginName]"
   form-title="{{currentPluginConfiguration.pluginName}}"
   root-object="currentPluginConfiguration.configuration"
+  save="saveConfiguration()"
   form-style="light"
   is-read-only="false">
   </generic-form>
